syntax = "proto3";

package text_tools;
option go_package = "github.com/ekkinox/grpc-demo/proto";
option php_namespace = "App\\TextTools";
option php_metadata_namespace = "App\\GPBMetadata";

import "google/api/annotations.proto";

enum Transformer {
  TRANSFORMER_UPPERCASE_UNSPECIFIED = 0;
  TRANSFORMER_LOWERCASE = 1;
}

message TransformTextRequest {
    Transformer transformer = 1;
    string text = 2;
}

message TransformTextResponse {
  string result = 1;
}

service TextToolsService {
  // Unary rpc
  rpc TransformText(TransformTextRequest) returns (TransformTextResponse) {
    option (google.api.http) = {
      post: "/v1/transform",
      body: "*"
    };
  };
  // BiDi rpc
  rpc TransformAndSplitText(stream TransformTextRequest) returns (stream TransformTextResponse) {
    option (google.api.http) = {
      post: "/v1/transform-and-split",
      body: "*"
    };
  };
}